причесывание и запуск проекта